--- a/main.css
+++ b/main.css
@@ -8,6 +8,39 @@
     font-family: "IBM Plex Sans";
 }
 
+#disableDiv {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    background-color: black;
+    z-index: 1;
+    display: none;
+  }
+
+.loginform
+{
+    padding: 25px;
+    position: absolute;
+    display: none;
+    max-height: 500px;
+    max-width: 400px;
+    min-width: 400px;
+    min-height: 500px;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 1;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.20);
+    border-radius: 0px;
+
+}
+
 .container{
     display: flex;
     position: absolute;
@@ -17,6 +50,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    z-index: -1;
 }
 .sidebar{
     width: 20%;
