--- a/styles/form.css
+++ b/styles/form.css
@@ -1,24 +1,11 @@
-html
-{
-   -ms-overflow-style: -ms-autohiding-scrollbar
-}
-#close
-{
-    position: relative;
-    top: -25px;
-    left:306px;
-    background: none;
-    border: none;
-    outline: none;
-    font-size: 20px;
-}
-#logForm
-{
-    
-}
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
 
-
-#loginForm h1
+*
+{
+    font-family: "IBM Plex Sans";
+    word-spacing: 0.3em;
+}
+.form-heading
 {
     text-align: center;
     margin-bottom:60px;
@@ -28,14 +15,12 @@ html
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
 .input-sec
 {
     border-bottom:  2px solid #adadad;
     position: relative;
     margin: 30px 0;
 }
-
 .input-sec input
 {
     font-size: 16px;
@@ -47,14 +32,14 @@ html
     height: 40px;
     background: none;
 }
-
 .input-sec span::before
 {
     content: attr(data-placeholder);
     position: absolute;
     left:5px;
     top: 10px;
-    color:#adadad;
+    /* color:#adadad; */
+    color: #adadad;
     z-index: -1;
     transition: 0.3s;
     text-transform: uppercase;
@@ -73,7 +58,6 @@ html
     z-index: 2;
     transition: 0.3s;
 }
-
 .input-sec input:focus + span::before
 {
     top:-15px;
@@ -93,8 +77,38 @@ html
 {
     width: 100%;
 }
+.button-holder
+{
+    display: flex;
+    
+}
+.gap
+{
+    display: block;
+    width: 20px;
 
-.logBtn
+}
+
+.resBtn
+{
+    width: 100%;
+    height: 48px;
+    border:none;
+    outline: none;
+    background: -webkit-linear-gradient(-120deg, #bdbdbd,#ffffff);
+    background: -ms-linear-gradient(-120deg,#bdbdbd,#ffffff);
+    background-size: 200%;
+    background-position: left;
+    transition: 0.5s;
+    color: #555;
+    font-size: 18px;
+    /* margin: 5px; */
+    margin-bottom: 10px;
+    cursor: pointer;
+    box-shadow: 3px 4px 7px rgba(0,0,0,0.30);
+    /* border: 1px solid #ddd; */
+}
+.subBtn
 {
     width: 100%;
     height: 48px;
@@ -107,18 +121,22 @@ html
     transition: 0.5s;
     color: #fff;
     font-size: 18px;
+    /* margin: 5px; */
     margin-bottom: 50px;
     cursor: pointer;
     box-shadow: 3px 5px 7px rgba(0,0,0,0.30);
-
-
 }
-.logBtn:hover
+.subBtn:hover
 {
     background-position: right;
 }
+.resBtn:hover
+{
+    background-position: right;
+    /* color: #d76d77; */
+}
 
-.regText
+.bottomText
 {
     text-align: center;
 }
