--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
 *{
     margin: 0;
@@ -131,7 +130,7 @@ html
 }
 #ham
 {
-    background: url(ham.svg);
+    background: url(/images/ham.svg);
     width: 32px;
     height: 32px;
     line-height: 32px;
