--- a/styles/reg.css
+++ b/styles/reg.css
@@ -4,6 +4,7 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
+    font-family: "IBM Plex Sans";
 }
 
  html
@@ -14,8 +15,8 @@
 
 body
 {
-    background: -webkit-linear-gradient(140deg, #3a1c71, #d76d77);
-    background: linear-gradient(140deg, #3a1c71, #d76d77);
+    background: -webkit-linear-gradient(-60deg, #3a1c71, #d76d77);
+    background: linear-gradient(-60deg, #3a1c71, #d76d77);
     /* transform: rotate(120deg); */
     background-size: 100% 100%;
     /* background-repeat: no-repeat;
@@ -36,6 +37,8 @@ body
     transform: translate(0%,0%);
     z-index: 5;
     box-shadow: 3px 5px 10px rgba(0,0,0,0.30);
+    border: 1px solid rgb(218, 218, 218);
+
 
 }
 
