--- a/styles/form.css
+++ b/styles/form.css
@@ -22,6 +22,8 @@
     /* width: 50%;
     text-align: right; */
     background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    background: linear-gradient(-120deg,#3a1c71 , #d76d77 , #ffaf7b);
+
     /*background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);*/
     -webkit-background-clip: text;
     background-clip: text;
@@ -38,6 +40,7 @@
     text-align: center;
     margin-bottom:45px;
     background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -82,6 +85,7 @@
     top: 39.5px;
     background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
     background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+
     z-index: 2;
     transition: 0.3s;
 }
@@ -144,6 +148,7 @@
     outline: none;
     background:-webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
     background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+
     background-size: 200%;
     background-position: left;
     transition: 0.5s;
