--- a/styles/main.css
+++ b/styles/main.css
@@ -44,6 +44,7 @@ html {
     left: 50%; */
     /* transform: translate(-50%,-50%); */
     box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
 }
 
 .bar {
@@ -146,7 +147,7 @@ html {
     fill: #3a1c71;
 }
 .edit-settings {
-    display: block;
+    display: none;
     margin: 0 7px 5px;
     color: #aaa;
 }
@@ -190,14 +191,68 @@ textarea {
     resize: none;
     border: none;
     background-color: rgb(255, 255, 255);
+    background-color: transparent;
     padding: 10px;
     border: 1px solid rgb(218, 218, 218);
     border-top: none;
+    border-bottom: none;
     font-size: 1em;
     /*     font-weight: 300;
  */
     font-family: 'IBM Plex Sans';
     word-spacing: 0.3em;
+}
+/* .bap {
+    display: relative;
+    width: 76%;
+} */
+.alter-options {
+    position: absolute;
+    bottom: 15px;
+    right: 25px;
+}
+.option-toggler {
+    display: none;
+}
+#createNewLink,
+#createNewFile,
+#createNewNote,
+#expandOptions {
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 40px;
+    height: 40px;
+    background-color: #3a1c71;
+    border-radius: 50%;
+    margin: 10px 0;
+    box-shadow: 1px 3px 7px -2px rgba(0, 0, 0, 0.9);
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background-size: 1000%;
+    background-position: left;
+    padding: 5px;
+    transition: 0.2s linear;
+}
+#createNewLink i,
+#createNewFile i,
+#createNewNote i,
+#expandOptions i {
+    color: white;
+    font-size: 1.5em;
+}
+#createNewLink:hover,
+#createNewFile:hover,
+#createNewNote:hover,
+#expandOptions:hover {
+    transform: scale(1.1);
+    box-shadow: 3px 3px 10px -2px rgba(0, 0, 0, 0.8);
+    background-position: right;
+}
+
+#createNewLink[title] {
+    background-color: white;
+    border: none;
+    color: #3a1c71;
 }
 
 @media only screen and (max-width: 800px) {
