--- a/styles/mynotes.css
+++ b/styles/mynotes.css
@@ -1,69 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: "IBM Plex Sans";
+    font-family: 'IBM Plex Sans';
 }
-html
-{
-   -ms-overflow-style: -ms-autohiding-scrollbar; /*to hide scrollbar in IE*/
+html {
+    -ms-overflow-style: -ms-autohiding-scrollbar; /*to hide scrollbar in IE*/
 }
-.container{
+.container {
     display: flex;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     background-color: white;
     z-index: -1;
     padding: 35px;
-
 }
-.sidebar{
+.sidebar {
     width: 20%;
     margin-right: 20px;
-    display: inline-block;
+    /* display: inline-block; */
+    float: left;
 }
-
-.dashboard
-{
+.sidemenu {
+    position: sticky;
+    top: 0;
+}
+.dashboard {
     width: 100%;
-    border: 1px solid  rgb(218, 218, 218);
+    border: 1px solid rgb(218, 218, 218);
     background-color: #ffffff;
-    box-shadow: 3px 5px 7px rgba(0,0,0,0.10);
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.1);
     color: #444;
-    
 }
-.dashboard progress
-{
+.dashboard progress {
     width: 100%;
     -webkit-appearance: none;
     appearance: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
     height: 32px;
-    
 }
-progress::-webkit-progress-bar
-{
+progress::-webkit-progress-bar {
     background-color: #ececec !important;
 }
-progress::-webkit-progress-value
-{
-    background:-webkit-linear-gradient(120deg,#d76d77 , #ffaf7b);
+progress::-webkit-progress-value {
+    background: -webkit-linear-gradient(120deg, #d76d77, #ffaf7b);
 }
 
-.dashboard div
-{
+.dashboard div {
     padding: 10px 10px;
 }
 
-.dashboard .dash-head
-{
+.dashboard .dash-head {
     width: 100%;
     height: 48px;
     text-align: center;
     line-height: 24px;
-    color:#d76d77;
+    color: #d76d77;
     /* background: -webkit-linear-gradient(120deg, #bdbdbd,#ffffff);
     background: -ms-linear-gradient(120deg,#bdbdbd,#ffffff); */
     background-color: #f5f5f5;
@@ -75,127 +69,289 @@ progress::-webkit-progress-value
     /* box-shadow: 3px 5px 7px rgba(0,0,0,0.30); */
     font-size: 1.5em;
     outline: none;
-    
 }
 
-.dashboard div span
-{
+.dashboard div span {
     color: #d76d77;
     font-size: 1.2em;
     margin-left: 10px;
 }
-.note-lists
-{
+.note-lists {
     background-color: rgb(255, 255, 255);
-    width: 100%;
-    
+    /* overflow-x: scroll; */
+    width: 80%;
 }
-.note-lists ul
-{
+/* .note-lists ul {
     list-style: none;
     list-style-type: none;
     padding: 20px;
     padding-top: 0;
+
+} */
+
+/* .note-lists ul li {
+    background-color: yellow;
+    height: 80px;
 }
 
-.unit
-{
-    display: block;
-    width: 200px;
-    height: 200px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid  rgb(218, 218, 218);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    box-shadow: 3px 5px 7px rgba(0,0,0,0.10);
-    float: left;
-    margin-right: 25px;
-    margin-bottom: 25px;
-}
-
-.unit .list-title
-{
-    background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background-position: left;
-    background-size: 200%;
-    transition: 0.5s;
-    height: 32px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    padding: 5px;
-    color:white;
-    font-weight: 800;
-}
-.unit button
-{
-    outline: none;
-    border: none;
-    background: none;
-    color: #adadad;
+.unit {
+    display: flex;
+    justify-content: center;
     position: relative;
-    right: -170px;
-    bottom: -70px;
+    top: 50%;
+    transform: translateY(-50%);
 }
-.unit button:hover
-{
+
+.unit div {
+    margin: 10px;
+    background-color: wheat;
+    height: 75px;
+} */
+
+table {
+    /* table-layout: fixed; */
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 0.5em;
+    margin-top: -1em;
+}
+
+tr {
+    /* background-color: wheat; */
+    /* margin: 20px 0; */
+    /* display: block;
+    width: 100%; */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 1px rgba(0, 0, 0, 0.1);
+    transition: 0.2s linear;
+}
+
+thead th {
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
+    border-bottom: 1px solid rgb(192, 192, 192);
+    border-bottom: 1px solid #d76d77;
+}
+thead #delete {
+    border-right: 1px solid #d76d77;
+}
+
+thead #noteid {
+    color: #fff;
+    background-color: #d76d77;
+}
+
+.head {
+    box-shadow: 0px 3px 15px -3px rgba(0, 0, 0, 0.6);
+}
+th {
+    color: rgb(66, 66, 66);
+    text-align: center;
+}
+.head #lastVisit {
+}
+.head #lastEdit {
+}
+.head #expire {
+}
+.head #textcontent {
+}
+.head #share {
+}
+.head #download {
+}
+.head #delete {
+}
+th,
+td {
+    padding: 20px 10px;
+}
+td {
+    /* border-bottom: 1px solid #ddd; */
+    text-align: center;
+    color: #555;
+}
+
+tr:hover {
+    box-shadow: 0px 2px 15px -5px rgba(0, 0, 0, 0.6);
+}
+
+#noteid {
+    background-color: #d76d7710;
     color: #d76d77;
+    font-weight: 600;
+    max-width: 120px;
+}
+#noteid .sub-unit {
+    word-break: break-all;
+    width: 100%;
+    text-align: center;
 }
 
-.unit:hover
-{
-    box-shadow: 3px 5px 7px rgba(0,0,0,0.30);
+#lastVisit {
+    /* background-color: wheat; */
+}
+#download a {
+    color: rgb(92, 167, 92);
+}
+#delete a {
+    color: rgb(240, 124, 124);
+}
+#share a {
+    color: rgb(85, 197, 241);
+    font-size: 1.4em;
 }
 
-.unit:hover > .list-title
-{
-    background-position: right;
-    
-}
+@media only screen and (max-width: 800px) {
+    .sidebar {
+        display: none;
+        margin-right: 0;
+    }
+    .container {
+        padding: 10px;
+    }
+    .note-lists {
+        width: 100%;
+        /* overflow-x: scroll; */
+        margin: 0;
+    }
 
-.unit .list-text
-{
-    background-size: 200%;
-    transition: 0.5s;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    padding: 5px;
-    color:#333;
-    text-align: justify;
-
-}
-
-@media only screen and (max-width:800px)
-{
-    .sidebar{
+    thead {
         display: none;
     }
-    .unit
-    {
+
+    /* .container {
         display: block;
-        width: 200px;
-        height: 80px;
-        background-color: rgb(255, 255, 255);
-        border: 1px solid  rgb(218, 218, 218);
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
-        box-shadow: 3px 5px 7px rgba(0,0,0,0.10);
+    } */
+    table {
+        display: block;
+    }
+    tr {
+        display: inline-block;
+        /* margin: 8px; */
+        /* border: 1px solid rgb(0, 0, 0); */
+        /* border-left: 1px solid #ffaf7b;
+        border-right: 1px solid #d76d77;
+        border-bottom: 1px solid #d76d77; */
+
+        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.4),
+            0px 0px 1px rgba(0, 0, 0, 0.1);
+
+        width: 100%;
+        margin: 10px 0;
+    }
+    td {
+        display: block;
         float: left;
-        margin-right: 25px;
-        margin-bottom: 25px;
+        width: 100%;
     }
-    .unit .list-text
-    {
-        visibility: hidden;
+
+    #noteid {
+        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+        background: -webkit-linear-gradient(120deg, #d76d77, #ffaf7b);
+        color: white;
+        max-width: 100%;
     }
-    .unit button
-    {
-        outline: none;
-        border: none;
-        background: none;
-        color: #adadad;
+
+    #lastEdit,
+    #lastVisit,
+    #expire {
+        display: inline-block;
+        width: calc(100% / 3);
+        /* min-width: 80px; */
+        height: 60px;
+        float: left;
         position: relative;
-        right: -170px;
-        bottom: 50px;
+        border-bottom: 1px solid rgb(233, 233, 233);
     }
+    #lastVisit {
+        border-left: 1px solid rgb(233, 233, 233);
+        border-right: 1px solid rgb(233, 233, 233);
+    }
+    #lastEdit .sub-unit,
+    #lastVisit .sub-unit,
+    #expire .sub-unit {
+        position: absolute;
+        top: 30px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    #lastEdit::before,
+    #lastVisit::before,
+    #expire::before {
+        position: absolute;
+        top: 2px;
+        left: 0;
+        /* background-color: lightgoldenrodyellow; */
+        width: 100%;
+        color: #999;
+    }
+    #lastVisit::before {
+        content: 'Last Visited';
+    }
+    #lastEdit::before {
+        content: 'Last Edited';
+    }
+    #expire::before {
+        content: 'Expiration';
+    }
+
+    #privacy {
+        height: 10px;
+        position: relative;
+        border-bottom: 1px solid rgb(233, 233, 233);
+        /* background-color: rgb(250, 250, 250); */
+    }
+    #textcontent {
+        background-color: rgb(245, 245, 245);
+    }
+    #textcontent .sub-unit {
+        display: inline-block;
+        width: 100%;
+        word-wrap: break-word;
+        /* word-break: break-all; */
+        word-break: normal;
+        overflow-wrap: break-word;
+    }
+    #privacy .sub-unit {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    #share,
+    #download,
+    #delete {
+        display: inline-block;
+        width: calc(100% / 3);
+        height: 60px;
+        float: left;
+        position: relative;
+        border-bottom: 1px solid rgb(233, 233, 233);
+    }
+
+    #share a {
+        position: relative;
+        line-height: 20px;
+    }
+
+    /* thead,
+    th,
+    table,
+    tr,
+    td,
+    tbody,
+    td p table div,
+    table table {
+        width: 100% !important;
+        float: left;
+        clear: both;
+        display: block;
+
+        text-align: center;
+    } */
 }
