--- a/styles/side2.css
+++ b/styles/side2.css
@@ -1,44 +1,38 @@
-.top li
-{
+.top li {
     list-style: none;
-    margin:0px;
+    margin: 0px;
     margin-bottom: 10px;
-
 }
 
-.drp
-{
+.drp {
     display: none;
-    transition: 0.3s;
+    /* transition: 0.3s; */
 }
 
-
-.parentButton, .last-parent
-{
+.parentButton,
+.last-parent {
     width: 100%;
     height: 48px;
     text-align: center;
     line-height: 48px;
-    color:white;
-    background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    color: white;
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
     background-position: left;
     background-size: 200%;
     transition: all 0.7s ease;
     overflow: hidden;
     border: none;
-    box-shadow: 3px 5px 7px rgba(0,0,0,0.30);
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.3);
     font-size: 1em;
     position: relative;
     outline: none;
 }
-.last-parent
-{
+.last-parent {
     cursor: pointer;
 }
-.parentButton::after
-{
-    content: "";
+.parentButton::after {
+    content: '';
     position: absolute;
     top: 20px;
     right: 20px;
@@ -46,28 +40,21 @@
     border-color: #ffffff transparent transparent transparent;
     pointer-events: none;
 }
-.parentButton:hover, .last-parent:hover
-{
+.parentButton:hover,
+.last-parent:hover {
     background-position: right;
 }
 
-
-
-
-
-.parentButton:focus
-{
-    box-shadow: 0px 0px 7px rgba(0,0,0,0.30);
+.parentButton:focus {
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
     background-position: center;
 }
 
-.parentButton:focus+.drp
-{
+.parentButton:focus + .drp {
     /* display: block; */
 }
 
-.childButton
-{
+.childButton {
     width: 100%;
     height: 40px;
     text-align: center;
@@ -77,38 +64,32 @@
     transition: all 0.7s ease;
     overflow: hidden;
     border: none;
-/*     box-shadow: 2px 2px 2px rgba(0,0,0,0.10);*/ 
-    background: -webkit-linear-gradient(120deg, #bdbdbd,#ffffff);
-    background: -ms-linear-gradient(120deg,#bdbdbd,#ffffff);
-   
+    /*     box-shadow: 2px 2px 2px rgba(0,0,0,0.10);*/
+    background: -webkit-linear-gradient(120deg, #bdbdbd, #ffffff);
+    background: -ms-linear-gradient(120deg, #bdbdbd, #ffffff);
+
     background-position: left;
     background-size: 200%;
-    transition: 0.2s ease-in-out;
+    transition: 0.2s linear;
     font-size: 0.9em;
     outline: none;
-
 }
-.childButton:hover
-{
+.childButton:hover {
     /* background-position: center; */
     color: #d76d77;
     font-size: 1em;
     font-weight: 700;
-
-
 }
-.childButton:focus, .parentButton:focus
-{
+.childButton:focus,
+.parentButton:focus {
     outline: none;
 }
 
-.top li input[type="button"]:focus
-{
+.top li input[type='button']:focus {
     outline: none;
 }
 
-.drp li{
+.drp li {
     margin: 0;
     /* box-shadow: 2px 2px 2px rgba(0,0,0,0.10); */
 }
-
