designed shortner page and before clearing mess

--- a/styles/topbar.css
+++ b/styles/topbar.css
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
-:root {
-    --edsetH: 0px;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -12,203 +8,31 @@
 }
 html {
     -ms-overflow-style: -ms-autohiding-scrollbar; /*to hide scrollbar in IE*/
-    /* overflow: hidden; */
 }
-
 .container {
     display: flex;
-    position: absolute;
-    width: 90%;
-    height: 80vh;
+    /* position: absolute; */
+    width: 100%;
     background-color: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     z-index: -1;
+    padding: 35px;
 }
 .sidebar {
     width: 20%;
     margin-right: 20px;
-    height: 80vh;
-    display: inline-block;
+    /* display: inline-block; */
+    float: left;
 }
-#drp1,
-#drp2 {
-    display: none;
-}
-
-.editor {
-    display: inline-block;
-    /* position: absolute; */
-    position: relative;
-    width: 80%;
-    height: 80vh;
-    background-color: white;
-    /* top: 50%;
-    left: 50%; */
-    /* transform: translate(-50%,-50%); */
-    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-}
-
-.bar {
-    width: 100%;
-    border: 1px solid rgb(218, 218, 218);
-    border-bottom: none;
-}
-.head-bar {
-    height: 48px;
-}
-
-.title,
-.btns {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    user-select: none;
-    /* line-height: 48px; */
-}
-
-.title {
-    display: inline-block;
-    margin-left: 10px;
-}
-.title a {
-    display: inline-block;
-    color: #d76d77; /*if gradient fails*/
-    font-size: 1.5em;
-    font-weight: 900;
-    font-family: sans-serif;
-    background: -webkit-linear-gradient(
-        120deg,
-        #3a1c71,
-        #d76d77,
-        #ffaf7b
-    ); /*this and bottom few lines are for gradient text*/
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-position: center;
-    background-size: 200%;
-}
-.title:hover {
-    background-position: right;
-}
-.btns {
-    float: right;
-    display: flex;
-    padding-right: 5px;
-}
-
-#ham {
-    /* background: url("../images/ham.svg"); */
-    /*to access image from sibling subfolder*/
-    background: none;
-    width: 32px;
-    height: 32px;
-    line-height: 32px;
-    outline: none;
-    border: none;
-    font-size: 1.5em;
-    background: -webkit-linear-gradient(
-        120deg,
-        #3a1c71,
-        #d76d77,
-        #ffaf7b
-    ); /*this and bottom few lines are for gradient text*/
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-/* #ham svg
-{
-    fill: #d76d77;
-} */
-#ham:focus {
-    outline: none;
-}
-#expand {
-    width: 32px;
-    height: 32px;
-    line-height: 32px;
-    outline: none;
-    border: none;
-    background-color: white;
-}
-
-#expand svg {
-    fill: #d76d77;
-    transition: 0.2s;
-    cursor: pointer;
-    transform: scale(0.8);
-    -webkit-tap-highlight-color: transparent;
-}
-
-#expand:hover svg {
-    fill: #3a1c71;
-}
-.edit-settings {
-    display: none;
-    margin: 0 7px 5px;
-    color: #aaa;
-}
-
-.sub-settings {
-    display: inline-block;
-    margin: 0 5px 5px;
-    padding: 5px;
-    border: 1px solid #eee;
-    border-radius: 5px;
-}
-
-.sep-div {
-    display: inline-block;
-}
-.sep-div input[type='radio'] {
-    margin-right: 3px;
-}
-
-.sep-div select {
-    border: 1px solid #dedede;
-}
-
-.sep-div input[type='text'] {
-    border: 1px solid #eee;
-    outline: none;
-    padding: 2px;
-    color: #aaa;
-}
-
-.sep-div select,
-.sep-div select option {
-    color: #aaa;
-    outline: none;
+.sidemenu {
+    position: sticky;
+    top: 0;
 }
 
 .fuse {
-    width: 100%;
-    height: calc(80vh - var(--edsetH));
-    outline: none;
-    resize: none;
-    background-color: transparent;
-    border: 1px solid rgb(218, 218, 218);
-    border-bottom: none;
-    /* position: relative; */
+    background-color: rgb(255, 255, 255);
+    /* overflow-x: scroll; */
+    width: 80%;
 }
-textarea {
-    width: 100%;
-    height: 100%;
-    outline: none;
-    resize: none;
-    border: none;
-    background-color: transparent;
-    padding: 10px;
-    font-size: 1em;
-    font-family: 'IBM Plex Sans';
-    word-spacing: 0.3em;
-    text-align: justify;
-}
-
 .mini-container {
     /* position: absolute; */
     width: 100%;
@@ -216,12 +40,13 @@ textarea {
     /* top: 40%;
     transform: translateY(-60%); */
     padding: 40px;
-    margin-top: 50px;
+    padding-top: 0;
     /* background-color: #ffaf7b; */
 }
 .example-span {
     width: 100%;
     margin-bottom: 10px;
+    margin-top: -10px;
 }
 #exampleSpan {
     display: block;
@@ -334,9 +159,9 @@ textarea {
 }
 
 .alter-options {
-    position: absolute;
-    bottom: 15px;
-    right: 25px;
+    position: fixed;
+    bottom: 25px;
+    right: 30px;
 }
 .option-toggler {
     display: none;
@@ -348,8 +173,8 @@ textarea {
     background: transparent;
     border: none;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: #3a1c71;
     border-radius: 50%;
     margin: 10px 0;
@@ -391,6 +216,9 @@ textarea {
         height: fit-content;
         overflow-y: visible;
     }
+    .fuse {
+        width: 100%;
+    }
     .mini-container {
         padding: 20px;
         margin-top: 0px;
@@ -410,16 +238,5 @@ textarea {
     #shortenButton {
         display: inline-block;
         font-size: 1em;
-    }
-}
-@media only screen and (max-height: 400px) {
-    .alter-options {
-        display: none;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-    .btns #ham {
-        display: none;
     }
 }
