url shortening funtionality implemented

--- a/styles/mynotes.css
+++ b/styles/mynotes.css
@@ -15,7 +15,7 @@ html {
     width: 100%;
     background-color: white;
     z-index: -1;
-    padding: 35px;
+    padding: 0 35px;
 }
 .sidebar {
     width: 20%;
@@ -87,7 +87,7 @@ table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0 0.5em;
-    margin-top: -1em;
+    margin-top: -0.5em;
 }
 
 tr {
@@ -170,6 +170,12 @@ tr:hover {
 #share a {
     color: rgb(85, 197, 241);
     font-size: 1.4em;
+}
+@media only screen and (min-width: 1600px) {
+    .holder {
+        max-width: 1600px;
+        margin: 0 auto;
+    }
 }
 
 @media only screen and (max-width: 800px) {
