--- a/styles/short.css
+++ b/styles/short.css
@@ -9,25 +9,38 @@
 html {
     -ms-overflow-style: -ms-autohiding-scrollbar; /*to hide scrollbar in IE*/
 }
+
 .container {
-    width: 90%;
-    background-color: rgb(255, 255, 255);
+    display: flex;
+    /* position: absolute; */
+    width: 100%;
+    background-color: white;
     z-index: -1;
     padding: 35px;
-    margin: 0px auto;
+}
+.sidebar {
+    width: 20%;
+    margin-right: 20px;
+    /* display: inline-block; */
+    float: left;
+}
+.sidemenu {
+    position: sticky;
+    top: 0;
 }
 
 .fuse {
-    width: 100%;
+    background-color: rgb(255, 255, 255);
+    /* overflow-x: scroll; */
+    width: 80%;
 }
-
 .mini-container {
     /* position: absolute; */
     width: 100%;
     height: fit-content;
     /* top: 40%;
     transform: translateY(-60%); */
-    padding: 40px;
+    /* padding: 40px; */
     padding-top: 0;
     /* background-color: #ffaf7b; */
 }
@@ -45,111 +58,101 @@ html {
     text-transform: uppercase;
     color: #ffaf7b;
 }
-
-#urlBox {
-    /* position: absolute; */
-    /* height: 40px; */
-    width: 100%;
-    box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.1),
-        inset -3px -3px 5px rgba(255, 255, 255, 1),
-        3px 3px 5px rgba(0, 0, 0, 0.07);
-
-    border: 2px solid transparent;
-    border-radius: 10px;
-    padding: 8px 20px;
-    font-size: 1.2em;
-    color: #333;
-    text-align: center;
-    outline: none;
-    background-color: rgb(250, 250, 250);
-    transition: 0.5s;
-    /* top: 50%;
-    transform: translateY(-50%); */
+.row2 {
+    margin-bottom: 50px;
 }
-#urlBox:focus {
-    border: 2px solid #ffaf7b;
-}
-#shortenButton {
-    border: none;
-    outline: none;
-    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-
-    background-size: 500%;
-    background-position: left;
-    transition: 0.5s;
-    color: #fff;
-    font-size: 2em;
-    /* margin: 5px; */
-    margin-top: 20px;
-    cursor: pointer;
-    padding: 8px 20px;
-    text-transform: uppercase;
-}
-#shortenButton:hover {
-    background-position: right;
-}
-
-.shorten-result {
-}
-.your-result-span {
-    margin-top: 20px;
+.result-row {
     display: none;
 }
-#yourResultSpan {
-    font-size: 2em;
-    color: #ffaf7b;
-    text-transform: uppercase;
+.alert {
+    display: none;
+    text-align: center;
+    color: #555;
+    margin-top: 20px;
 }
-.result-url-box {
-    margin-top: 50px;
+.row1 {
     width: 100%;
-    height: 50px;
+    display: flex;
+    height: 60px;
 }
-#resultUrlBox {
-    width: 100%;
+.url-box {
+    display: inline-block;
+    margin: 0;
+    height: 100%;
+    width: calc(100% - 200px);
+}
+.urlBox {
     box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.1),
         inset -3px -3px 5px rgba(255, 255, 255, 1),
-        3px 3px 5px rgba(0, 0, 0, 0.07);
+        3px 0px 5px rgba(0, 0, 0, 0.07);
 
-    border: 2px solid transparent;
-    border-radius: 10px;
-    padding: 8px 20px;
+    border: 2px solid #ffaf7b;
+    border-right: none;
+    /* border-radius: 10px; */
+    padding: 8px 5px;
     font-size: 1.2em;
     color: #333;
-    text-align: center;
+    text-align: left;
     outline: none;
     background-color: rgb(250, 250, 250);
     transition: 0.5s;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
+    height: 100%;
+    width: 100%;
 }
-.result-url-share {
-    display: flex;
-    justify-content: center;
+.urlBox:focus {
+    border: 2px solid #ffaf7b;
+    border-right: none;
 }
-#copyToClip {
+.error-class {
+    border: 2px solid rgb(251, 75, 75);
+}
+.error-class::placeholder {
+    color: rgb(245, 75, 75);
+    opacity: 1;
+}
+.button-box,
+.copy-button-box {
+    margin: 0;
+    width: 200px;
+    height: 100%;
+    display: inline-block;
+}
+.button-box button {
+    height: 100%;
     border: none;
     outline: none;
+    width: 100%;
     background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
     background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-    font-size: 1em;
+
     background-size: 500%;
     background-position: left;
     transition: 0.5s;
     color: #fff;
+    font-size: 1.5em;
     /* margin: 5px; */
     cursor: pointer;
-    padding: 5px;
+    padding: 8px 20px;
     text-transform: uppercase;
-    border-radius: 5px;
-    margin: 5px;
+    /* border-top-right-radius: 8px; */
+    /* border-bottom-right-radius: 8px; */
+}
+.button-box button:hover {
+    background-position: right;
+}
+.result-url-box {
+    width: calc(100% - 50px);
+}
+.copy-button-box {
+    width: 60px;
 }
 
 .alter-options {
-    position: absolute;
-    bottom: 15px;
-    right: 25px;
+    position: fixed;
+    bottom: 25px;
+    right: 30px;
 }
 .option-toggler {
     display: none;
@@ -161,8 +164,8 @@ html {
     background: transparent;
     border: none;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: #3a1c71;
     border-radius: 50%;
     margin: 10px 0;
@@ -195,6 +198,13 @@ html {
     color: #3a1c71;
 }
 
+@media only screen and (min-width: 1200px) {
+    .holder {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .sidebar {
         display: none;
@@ -204,9 +214,11 @@ html {
         height: fit-content;
         overflow-y: visible;
     }
-
+    .fuse {
+        width: 100%;
+    }
     .mini-container {
-        padding: 20px;
+        padding: 5px;
         margin-top: 0px;
     }
 
@@ -216,13 +228,47 @@ html {
         font-size: 1.1em;
         text-align: center;
     }
-    .shorten-button-box {
-        width: 100%;
-        display: flex;
-        justify-content: center;
+    .url-box {
+        width: calc(100% - 150px);
     }
-    #shortenButton {
+    .button-box {
+        width: 150px;
+        /* display: flex; */
+        /* justify-content: center; */
+    }
+    .button-box button {
         display: inline-block;
         font-size: 1em;
+    }
+}
+@media only screen and (max-width: 450px) {
+    .container {
+        padding: 5px;
+    }
+    .fuse {
+        width: 100%;
+    }
+    .mini-container {
+        padding: 5px;
+        padding-top: 20px;
+        margin-top: 0px;
+        /* background-color: #ffaf7b; */
+    }
+
+    #exampleSpan {
+        display: block;
+        width: 100%;
+        font-size: 1.1em;
+        text-align: center;
+    }
+    .url-box {
+        width: calc(100% - 80px);
+    }
+    .button-box {
+        width: 80px;
+    }
+    .button-box button {
+        font-size: 0.8em;
+        padding: 5px;
     }
 }
