myfiles js functionalities implemented

--- a/styles/myfiles.css
+++ b/styles/myfiles.css
@@ -45,6 +45,7 @@
 
 .col4 {
     width: 100%;
+    color: gray;
 }
 .col5,
 .col6,
@@ -52,43 +53,86 @@
     width: calc(100% / 3);
 }
 
+/* unvisited link */
+a:link {
+    color: #555;
+}
+
+/* visited link */
+a:visited {
+    color: #555;
+}
+
+/* mouse over link */
+a:hover {
+    color: #d76d77;
+}
+
+/* selected link */
+a:active {
+    color: #ffaf7b;
+}
+.col6 a {
+    color: rgb(92, 167, 92);
+}
+.col7 a {
+    color: rgb(240, 124, 124);
+}
+.col5 a {
+    color: rgb(85, 197, 241);
+}
+
 @media only screen and (max-width: 1400px) {
     .row-head {
         display: none;
+    }
+    .row-plate {
+        margin-bottom: 20px;
     }
     .col1 {
         width: 100%;
         box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
         background: -webkit-linear-gradient(120deg, #d76d77, #ffaf7b);
         color: white;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+        /* text-shadow: 0px 0px 1px rgb(0, 0, 0); */
+        /* font-weight: 400; */
+        /* border-top-left-radius: 5px; */
+        /* border-top-right-radius: 5px; */
     }
     .col2 {
         border-left: 1px solid #dedede;
-        border-right: 1px solid #dedede;
+        /* border-right: 1px solid #dedede; */
+        border-right: 1px solid #ebebeb;
     }
     .col3 {
         border-right: 1px solid #dedede;
     }
 
     .col4 {
-        border-top: 1px solid #dedede;
+        border-top: 1px solid rgb(235, 235, 235);
         border-left: 1px solid #dedede;
         border-right: 1px solid #dedede;
-        background-color: #f9f9f9;
+        background-color: #f6f6f6;
     }
     .col5 {
+        /* border-left: 1px solid #dedede; */
+        /* border-right: 1px solid #dedede; */
+        /* border-bottom: 1px solid #dedede; */
         border-left: 1px solid #dedede;
-        border-right: 1px solid #dedede;
-        border-bottom: 1px solid #dedede;
     }
     .col6 {
-        border-bottom: 1px solid #dedede;
+        /* border-bottom: 1px solid #dedede; */
     }
     .col7 {
-        border-left: 1px solid #dedede;
+        /* border-left: 1px solid #dedede; */
+        /* border-right: 1px solid #dedede; */
+        /* border-bottom: 1px solid #dedede; */
         border-right: 1px solid #dedede;
+    }
+    .col5,
+    .col6,
+    .col7 {
+        padding: 10px 5px;
         border-bottom: 1px solid #dedede;
     }
 }
