--- a/styles/myfiles.css
+++ b/styles/myfiles.css
@@ -1,4 +1,5 @@
-.row-plate {
+.row-plate,
+.row-head {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 0px 1px rgba(0, 0, 0, 0.1);
     transition: 0.2s linear;
     margin-bottom: 10px;
@@ -25,7 +26,7 @@
     /* display: inline-block; */
     /* width: calc(100% / 7); */
     /* border: 1px solid gray; */
-    color: #555;
+    color: #777;
     text-align: center;
     display: inline-flex;
     align-items: center;
@@ -53,14 +54,18 @@
     width: calc(100% / 3);
 }
 
+.col3 div {
+    text-align: left;
+}
+
 /* unvisited link */
 a:link {
-    color: #555;
+    color: #888;
 }
 
 /* visited link */
 a:visited {
-    color: #555;
+    color: #999;
 }
 
 /* mouse over link */
@@ -145,7 +150,8 @@ a:active {
 }
 
 @media only screen and (min-width: 1401px) {
-    .row-plate {
+    .row-plate,
+    .row-head {
         display: flex;
     }
 
@@ -174,21 +180,34 @@ a:active {
         word-break: break-all; */
     }
     .row1 {
-        width: 20%;
+        width: 30%;
     }
     .row2 {
-        width: 24%;
+        width: 20%;
     }
     .row3 {
-        width: 30%;
+        width: 24%;
     }
     .row4 {
         width: 26%;
     }
     .col1 {
         width: 100%;
-        background-color: #d76d7710;
+        padding: 20px;
+        /* background-color: rgba(85, 85, 85, 0.089);
+        color: #787878;
+        background: -webkit-linear-gradient(
+            120deg,
+            #3a1c7110,
+            #d76d7810,
+            #ffb07b10
+        );
+        background-size: 200%;
+        background-position: left; */
+        /* color: #fff; */
+        background-color: #d76d780a;
         color: #d76d77;
+        font-weight: 400;
     }
     .col2,
     .col3 {
@@ -203,6 +222,11 @@ a:active {
     .col7 {
         width: calc(100% / 3);
     }
+    .row-plate .col3,
+    .row-plate .col4 a {
+        font-weight: 300;
+        font-size: 0.9rem;
+    }
     .row-head {
         font-weight: 600;
         position: sticky;
@@ -210,7 +234,7 @@ a:active {
         background-color: white;
         box-shadow: 0px 2px 15px -5px rgba(0, 0, 0, 0.6);
     }
-    .row-head .col1,
+    /* .row-head .col1,
     .col2,
     .col3,
     .col4,
@@ -218,10 +242,13 @@ a:active {
     .col6,
     .col7 {
         height: 70px;
-    }
+    } */
     .row-head .col1 {
-        background-color: #d76d77;
-        color: white;
+        background-color: #ffaf7b;
+        background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+        background-size: 200%;
+        background-position: left;
+        color: #fff;
     }
 }
 @media only screen and (min-width: 1600px) {
