--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -63,6 +63,9 @@
 .nav ul li {
     list-style: none;
     display: block;
+    position: relative;
+    text-align: left;
+    padding-left: 20px;
 }
 .nav ul li a {
     display: flex;
@@ -105,25 +108,40 @@
     border-top: none;
     background-color: white;
 }
-.nav ul li {
-    position: relative;
+
+.nav ul ul li {
+    padding-left: unset;
 }
+.nav ul ul li a {
+    padding: 10px 20px 20px;
+    min-width: 150px;
+    max-width: 180px;
+    font-weight: 400;
+}
+
 .top-li::after {
     position: absolute;
     content: '';
     top: 20px;
-    right: 0;
+    right: -20px;
     padding: 8px 0px;
     border-right: 1px solid rgb(207, 207, 207);
 }
 .top-li:last-child::after {
     border-right: none;
 }
-.nav ul ul li a {
-    padding: 10px 20px 20px;
-    min-width: 135.53px;
-    max-width: 135.53px;
-    font-weight: 400;
+
+.top-li::before {
+    content: '';
+    position: absolute;
+    top: 27px;
+    right: -5px;
+    border: 5px solid;
+    border-color: #777 transparent transparent transparent;
+    pointer-events: none;
+}
+.top-li:last-child::before {
+    border: none;
 }
 
 @media only screen and (max-width: 800px) {
