js functionality for user dash card implemented

--- a/styles/myurl2.css
+++ b/styles/myurl2.css
@@ -166,7 +166,7 @@ a:active {
         background-color: #d76d7710;
         color: #d76d77;
     }
-    .col2 {
+    .row-plate .col2 {
         padding: 25px 15px;
     }
     .col2,
