--- a/styles/main.css
+++ b/styles/main.css
@@ -219,119 +219,6 @@ textarea {
     margin-top: 50px;
     /* background-color: #ffaf7b; */
 }
-.example-span {
-    width: 100%;
-    margin-bottom: 10px;
-}
-#exampleSpan {
-    display: block;
-    text-align: left;
-    width: 100%;
-    font-size: 2.5em;
-    font-weight: 900;
-    text-transform: uppercase;
-    color: #ffaf7b;
-}
-
-#urlBox {
-    /* position: absolute; */
-    /* height: 40px; */
-    width: 100%;
-    box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.1),
-        inset -3px -3px 5px rgba(255, 255, 255, 1),
-        3px 3px 5px rgba(0, 0, 0, 0.07);
-
-    border: 2px solid transparent;
-    border-radius: 10px;
-    padding: 8px 20px;
-    font-size: 1.2em;
-    color: #333;
-    text-align: center;
-    outline: none;
-    background-color: rgb(250, 250, 250);
-    transition: 0.5s;
-    /* top: 50%;
-    transform: translateY(-50%); */
-}
-#urlBox:focus {
-    border: 2px solid #ffaf7b;
-}
-#shortenButton {
-    border: none;
-    outline: none;
-    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-
-    background-size: 500%;
-    background-position: left;
-    transition: 0.5s;
-    color: #fff;
-    font-size: 2em;
-    /* margin: 5px; */
-    margin-top: 20px;
-    cursor: pointer;
-    padding: 8px 20px;
-    text-transform: uppercase;
-}
-#shortenButton:hover {
-    background-position: right;
-}
-
-.shorten-result {
-}
-.your-result-span {
-    margin-top: 20px;
-    display: none;
-}
-#yourResultSpan {
-    font-size: 2em;
-    color: #ffaf7b;
-    text-transform: uppercase;
-}
-.result-url-box {
-    margin-top: 50px;
-    width: 100%;
-    height: 50px;
-}
-#resultUrlBox {
-    width: 100%;
-    box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.1),
-        inset -3px -3px 5px rgba(255, 255, 255, 1),
-        3px 3px 5px rgba(0, 0, 0, 0.07);
-
-    border: 2px solid transparent;
-    border-radius: 10px;
-    padding: 8px 20px;
-    font-size: 1.2em;
-    color: #333;
-    text-align: center;
-    outline: none;
-    background-color: rgb(250, 250, 250);
-    transition: 0.5s;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-}
-.result-url-share {
-    display: flex;
-    justify-content: center;
-}
-#copyToClip {
-    border: none;
-    outline: none;
-    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
-    font-size: 1em;
-    background-size: 500%;
-    background-position: left;
-    transition: 0.5s;
-    color: #fff;
-    /* margin: 5px; */
-    cursor: pointer;
-    padding: 5px;
-    text-transform: uppercase;
-    border-radius: 5px;
-    margin: 5px;
-}
 
 .alter-options {
     position: absolute;
@@ -388,28 +275,12 @@ textarea {
     }
     .editor {
         width: 100%;
-        height: fit-content;
-        overflow-y: visible;
+        /* height: fit-content; */
+        /* overflow-y: visible; */
     }
     .mini-container {
         padding: 20px;
         margin-top: 0px;
-    }
-
-    #exampleSpan {
-        display: block;
-        width: 100%;
-        font-size: 1.1em;
-        text-align: center;
-    }
-    .shorten-button-box {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    #shortenButton {
-        display: inline-block;
-        font-size: 1em;
     }
 }
 @media only screen and (max-height: 400px) {
