--- a/styles/myfiles.css
+++ b/styles/myfiles.css
@@ -191,7 +191,7 @@ a:active {
     .row4 {
         width: 26%;
     }
-    .col1 {
+    .row-plate .col1 {
         width: 100%;
         padding: 20px;
         /* background-color: rgba(85, 85, 85, 0.089);
@@ -232,7 +232,7 @@ a:active {
         position: sticky;
         top: 0;
         background-color: white;
-        box-shadow: 0px 2px 15px -5px rgba(0, 0, 0, 0.6);
+        box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
     }
     /* .row-head .col1,
     .col2,
