--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -12,7 +12,7 @@
     box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid #d76d77;
     background-color: white;
-    /* z-index: 1; */
+    z-index: 1;
 }
 .headings {
     width: fit-content;
