--- a/styles/userdashcard.css
+++ b/styles/userdashcard.css
@@ -1,7 +1,8 @@
 .user-dash-card {
     display: block;
     width: 100%;
-    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2), 0px 0px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.3);
     /* border-radius: 15px; */
     color: #555;
     padding: 10px;
@@ -22,10 +23,11 @@
     background-color: lightsalmon;
     color: white;
     /* max-width: calc(attr(data-prv) * 1%); */
-    width: 50%;
+    width: 0%;
     width: calc(attr(data-prv) * 1%);
     max-width: 100%;
     height: 100%;
+    transition: 1s ease;
 }
 .usage-in {
     padding: 10px;
