--- a/styles/form.css
+++ b/styles/form.css
@@ -1,34 +1,29 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
 
-*
-{
-    font-family: "IBM Plex Sans";
+* {
+    font-family: 'IBM Plex Sans';
     word-spacing: 0.15em;
 }
-.warn
-{
+.warn {
     padding: 0 5px;
     width: 100%;
     color: #d76d77;
 }
-.headingz
-{
+.headingz {
     display: flex;
     width: 100%;
     background-color: rgb(255, 255, 255);
     vertical-align: middle;
     height: 50px;
-    
 }
-.headingz > div{
+.headingz > div {
     line-height: 50px;
 }
-.headingz > div:first-child
-{
+.headingz > div:first-child {
     /* width: 50%;
     text-align: right; */
-    background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background: linear-gradient(-120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background: linear-gradient(-120deg, #3a1c71, #d76d77, #ffaf7b);
 
     /*background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);*/
     -webkit-background-clip: text;
@@ -37,30 +32,27 @@
     font-size: 1.5em;
     font-weight: 900;
 }
-.headingz> div:last-child
-{
+.headingz > div:last-child {
     font-size: 1.2em;
 }
-.form-heading
-{
+.form-heading {
     text-align: center;
-    margin-bottom:45px;
-    background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    margin-bottom: 45px;
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
 
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.input-sec
-{
-    border-bottom:  2px solid #adadad;
+.input-sec {
+    border-bottom: 2px solid #adadad;
     position: relative;
     margin: 30px 0 5px 0;
+    z-index: 1;
 }
-.input-sec input
-{
+.input-sec input {
     font-size: 16px;
-    color:#333;
+    color: #333;
     border: none;
     width: 100%;
     outline: none;
@@ -68,11 +60,10 @@
     height: 40px;
     background: none;
 }
-.input-sec span::before
-{
+.input-sec span::before {
     content: attr(data-placeholder);
     position: absolute;
-    left:5px;
+    left: 5px;
     top: 10px;
     /* color:#adadad; */
     color: #adadad;
@@ -81,33 +72,29 @@
     text-transform: uppercase;
     font-size: smaller;
 }
-.input-sec span::after
-{
+.input-sec span::after {
     content: '';
     position: absolute;
     width: 0%;
     height: 3px;
-    left:0px;
+    left: 0px;
     top: 39.5px;
-    background: -webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
 
     z-index: 2;
     transition: 0.3s;
 }
-.input-sec input:focus + span::before
-{
-    top:-15px;
+.input-sec input:focus + span::before {
+    top: -15px;
 }
 
-.input-sec input:focus + span::after
-{
+.input-sec input:focus + span::after {
     width: 100%;
 }
 
-.focus + span::before
-{
-    top:-15px;
+.focus + span::before {
+    top: -15px;
 }
 /*this is a way to show error message in placeholder*/
 /* .redfocus + span::before
@@ -116,35 +103,28 @@
     content: attr(data-placeholder) ' can not be empty';
 }
  */
-.focus + span::after
-{
+.focus + span::after {
     width: 100%;
 }
-.warn + span::before
-{
-    color : #d76d77;
+.warn + span::before {
+    color: #d76d77;
 }
-.button-holder
-{
+.button-holder {
     margin-top: 45px;
     display: flex;
-    
 }
-.gap
-{
+.gap {
     display: block;
     width: 20px;
-
 }
 
-.resBtn
-{
+.resBtn {
     width: 100%;
     height: 48px;
-    border:none;
+    border: none;
     outline: none;
-    background: -webkit-linear-gradient(-120deg, #bdbdbd,#ffffff);
-    background: -ms-linear-gradient(-120deg,#bdbdbd,#ffffff);
+    background: -webkit-linear-gradient(-120deg, #bdbdbd, #ffffff);
+    background: -ms-linear-gradient(-120deg, #bdbdbd, #ffffff);
     background-size: 200%;
     background-position: left;
     transition: 0.5s;
@@ -153,17 +133,16 @@
     /* margin: 5px; */
     margin-bottom: 10px;
     cursor: pointer;
-    box-shadow: 3px 4px 7px rgba(0,0,0,0.30);
+    box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
     /* border: 1px solid #ddd; */
 }
-.subBtn
-{
+.subBtn {
     width: 100%;
     height: 48px;
-    border:none;
+    border: none;
     outline: none;
-    background:-webkit-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
-    background: -ms-linear-gradient(120deg,#3a1c71 , #d76d77 , #ffaf7b);
+    background: -webkit-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
+    background: -ms-linear-gradient(120deg, #3a1c71, #d76d77, #ffaf7b);
 
     background-size: 200%;
     background-position: left;
@@ -171,21 +150,18 @@
     color: #fff;
     font-size: 18px;
     /* margin: 5px; */
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     cursor: pointer;
-    box-shadow: 3px 5px 7px rgba(0,0,0,0.30);
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.3);
 }
-.subBtn:hover
-{
+.subBtn:hover {
     background-position: right;
 }
-.resBtn:hover
-{
+.resBtn:hover {
     background-position: right;
     /* color: #d76d77; */
 }
 
-.bottomText
-{
+.bottomText {
     text-align: center;
 }
