--- a/styles/myfiles.css
+++ b/styles/myfiles.css
@@ -251,9 +251,9 @@ a:active {
         color: #fff;
     }
 }
-@media only screen and (min-width: 1600px) {
+/* @media only screen and (min-width: 1600px) {
     .holder {
         max-width: 1600px;
         margin: 0 auto;
     }
-}
+} */
