--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -12,7 +12,7 @@
     box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid #d76d77;
     background-color: white;
-    z-index: 1;
+    z-index: 2; /*form input sec issue*/
 }
 .headings {
     width: fit-content;
@@ -67,6 +67,7 @@
     text-align: left;
     padding-left: 20px;
 }
+
 .nav ul li a {
     display: flex;
     background-color: white;
@@ -103,7 +104,7 @@
     /* box-shadow: 0px 8px 5px 2px rgba(0, 0, 0, 0.2); */
     box-shadow: 0px 8px 10px -2px rgba(0, 0, 0, 0.3);
 
-    z-index: 2;
+    z-index: 3;
     border: 1px solid #d76d77;
     border-top: none;
     background-color: white;
