--- a/styles/short.css
+++ b/styles/short.css
@@ -103,12 +103,12 @@
     width: 60px;
 }
 
-@media only screen and (min-width: 1200px) {
+/* @media only screen and (min-width: 1200px) {
     .holder {
         max-width: 1200px;
         margin: 0 auto;
     }
-}
+} */
 
 @media only screen and (max-width: 800px) {
     #exampleSpan {
