--- a/styles/userdashcard.css
+++ b/styles/userdashcard.css
@@ -24,7 +24,7 @@
     color: white;
     /* max-width: calc(attr(data-prv) * 1%); */
     width: 0%;
-    width: calc(attr(data-prv) * 1%);
+    /* width: calc(attr(data-prv) * 1%); */
     max-width: 100%;
     height: 100%;
     transition: 1s ease;
