--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -145,18 +145,70 @@
     border: none;
 }
 
+.ham-sec {
+    display: none;
+}
+
 @media only screen and (max-width: 800px) {
     .navbar {
         margin: 0 0 10px 0;
         position: sticky;
         top: 0;
+        width: auto;
+        display: flex;
+        /* position: relative; */
     }
     .nav-holder {
         display: none;
+    }
+    .headings {
+        position: absolute;
+        /* margin: 0 auto; */
+        left: calc(50% + 50px);
+        transform: translateX(calc(-50% - 50px));
+    }
+    .headings a {
+        padding-left: 0 !important;
+    }
+    .ham-sec {
+        display: flex;
+        float: right;
+        height: 100%;
+        min-width: 50px;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        font-size: 1.5rem;
+        transition: 0.3s;
+        user-select: none;
+    }
+    .ham-sec:active {
+        transform: scale(0.8);
     }
 }
 @media only screen and (max-height: 400px) {
 }
 
 @media only screen and (min-width: 800px) {
+}
+
+.ham-side {
+    width: 100%;
+    background-color: white !important;
+    position: absolute;
+    top: 60px;
+    z-index: 2;
+    height: fit-content;
+    /* left: 20px; */
+}
+.ham-sec div {
+    background: white;
+    z-index: 3;
+}
+.ham-side ul li {
+    list-style: none;
+    display: block;
+    min-height: 50px;
+    padding-left: 20px;
+    border-bottom: 1px solid #ffaf7b;
 }
