--- a/styles/main.css
+++ b/styles/main.css
@@ -57,21 +57,15 @@ html {
     border-bottom: none;
 }
 .head-bar {
+    width: 100%;
     height: 48px;
-}
-
-.title,
-.btns {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    user-select: none;
-    /* line-height: 48px; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .title {
-    display: inline-block;
-    margin-left: 10px;
+    width: fit-content;
 }
 .title a {
     display: inline-block;
@@ -94,15 +88,8 @@ html {
 .title:hover {
     background-position: right;
 }
-.btns {
-    float: right;
-    display: flex;
-    padding-right: 5px;
-}
 
 #ham {
-    /* background: url("../images/ham.svg"); */
-    /*to access image from sibling subfolder*/
     background: none;
     width: 32px;
     height: 32px;
@@ -120,20 +107,17 @@ html {
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-/* #ham svg
-{
-    fill: #d76d77;
-} */
+
 #ham:focus {
     outline: none;
 }
 #expand {
     width: 32px;
     height: 32px;
-    line-height: 32px;
     outline: none;
     border: none;
     background-color: white;
+    margin-right: 10px;
 }
 
 #expand svg {
@@ -269,14 +253,12 @@ textarea {
     color: #3a1c71;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
     .sidebar {
         display: none;
     }
     .editor {
         width: 100%;
-        /* height: fit-content; */
-        /* overflow-y: visible; */
     }
     .mini-container {
         padding: 20px;
@@ -289,8 +271,11 @@ textarea {
     }
 }
 
-@media only screen and (min-width: 800px) {
-    .btns #ham {
+@media only screen and (min-width: 1000px) {
+    #ham {
         display: none;
+    }
+    .title {
+        padding-left: 10px;
     }
 }
