--- a/views/styles/navbar.css
+++ b/views/styles/navbar.css
@@ -12,7 +12,7 @@
     box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid #d76d77;
     background-color: white;
-    z-index: 2; /*form input sec issue*/
+    z-index: 10; /*form input sec issue*/ /*before sub*/
 }
 .headings {
     width: fit-content;
