after partial project showdown

--- a/views/styles/file.css
+++ b/views/styles/file.css
@@ -20,7 +20,28 @@
     border: 5px dashed #dadada;
     height: 200px;
     position: relative;
+    width: 100%;
+    margin: 0 auto;
 }
+
+.row2-drag {
+    animation: drag 2s linear infinite;
+}
+
+@keyframes drag {
+    0% {
+        width: 100%;
+    }
+
+    50% {
+        width: 70%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
 .row2 label {
     position: absolute;
     top: 50%;
