--- a/views/styles/main.css
+++ b/views/styles/main.css
@@ -106,6 +106,7 @@ html {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin-left: 8px;
 }
 
 #ham:focus {
