--- a/views/styles/navbar.css
+++ b/views/styles/navbar.css
@@ -121,8 +121,9 @@
     border-color: #777 transparent transparent transparent;
     pointer-events: none;
 }
-.top-li:last-child::before {
-    border: none;
+.top-li:last-child {
+    /* border: none; */
+    margin-right: 15px;
 }
 
 .ham-sec {
